--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,7 @@ export(eem_inner_filter_effect)
 export(eem_names)
 export(eem_raman_normalisation)
 export(eem_read)
+export(eem_read_generic)
 export(eem_remove_blank)
 export(eem_remove_scattering)
 export(eem_set_wavelengths)
